--- a/MyTradeMTG/Views/Shared/_Layout.cshtml
+++ b/MyTradeMTG/Views/Shared/_Layout.cshtml
@@ -173,7 +173,7 @@
                                             </li>
                                         </ul>
                                     </div>
-                                   @* <a class="all-notification" href="#">See all notifications <i class="ti-arrow-right"></i></a>*@
+                                    <a class="all-notification" href="#">See all notifications <i class="ti-arrow-right"></i></a>
                                 </div>
                             </li>
                             <li class="nav-item dropdown header-profile">
