--- a/MyTradeMTG/Views/Wallet/WalletList.cshtml
+++ b/MyTradeMTG/Views/Wallet/WalletList.cshtml
@@ -45,7 +45,7 @@
                                                         }
                                                         else
                                                         {
-                                                            <td>@Item.PaymentMode- (@Item.BankName,@Item.BankBranch, <b>Txn No.-@Item.ChequeDDNo</b>, <b>Txn Date-</b>@Item.ChequeDDDate)</td>
+                                                            <td>@Item.PaymentMode- (Amount: @Item.TodaysCurrency,<b>@Item.BankName,@Item.BankBranch</b>, <b>Txn No.-@Item.ChequeDDNo</b>, <b>Txn Date-</b>@Item.ChequeDDDate)</td>
                                                         }
 
                                                         <td>@Item.TransactionDate</td>
