--- a/MyTradeMTG/assets/css/users/user-profile.css
+++ b/MyTradeMTG/assets/css/users/user-profile.css
@@ -54,7 +54,7 @@
     font-size: 20px;
     font-weight: 600;
     margin-top: 22px;
-    color: #4361ee;
+    color: #b3b3b3;
 }
 .user-profile .widget-content-area .user-info-list ul.contacts-block {
     border: none;
