--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -191,7 +191,7 @@
                                 else if (Session["Franchisestatus"].ToString() == "Approved")
                                 {
                                     <span class="text-success" style="font-size:23px">Franchise Registered : @Session["FirmName"]</span>
-                                    <a href="/Franchise/FranchiseDashBoard" class="btn btn-info btn-sm">Switch to Franchise Pannel</a>
+                                    <a href="#" class="btn btn-info btn-sm">Switch to Franchise Pannel</a>
                                 }
                                
 
@@ -364,7 +364,7 @@
                             <span class="nav-text">Level Report</span>
                         </a>
                         <ul aria-expanded="false">
-                            <li><a href="/Downline/DirectList"> DownTeam Tree</a></li>
+                            <li><a href="/Downline/DirectList"> DownTeam</a></li>
                             <li><a href="/user/TreeTTP"> Level Tree TR1</a></li>
                             <li><a href="/user/Tree"> Level Tree TR2</a></li>
                             <li><a href="/Downline/AssociateTree"> Direct List</a></li>
