--- a/MyTradeMTG/assets/css/structure.css
+++ b/MyTradeMTG/assets/css/structure.css
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
 p {
     margin-top: 0;
     margin-bottom: 0.625rem;
-    color: #515365;
+    /*color: #515365;*/
 }
 
 hr {
