--- a/MyTradeMTG/Views/Admin/PayoutRequestList.cshtml
+++ b/MyTradeMTG/Views/Admin/PayoutRequestList.cshtml
@@ -250,12 +250,13 @@
         </div>
     </div>
 }
-<script src="~/plugins/flatpickr/flatpickr.js"></script>
-<script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
+
 <script src="~/MyTradeMTGWebsite/assets/js/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6/jquery.min.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js" type="text/javascript"></script>
 <link href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="Stylesheet" type="text/css" />
+<script src="~/plugins/flatpickr/flatpickr.js"></script>
+    <script src="~/plugins/flatpickr/custom-flatpickr.js"></script>
 <script>
     if ($("#st").val() != 0) {
         $("#Status").val($("#st").val()).attr("selected", "selected");
@@ -269,6 +270,7 @@
         {
             // mode: "range"
         });
+    jQuery.noConflict();
     $('#TransactionDate').datepicker({
         dateFormat: 'dd/mm/yy',
     });
