--- a/MyTradeMTG/Views/Home/ShareLinkRegistration.cshtml
+++ b/MyTradeMTG/Views/Home/ShareLinkRegistration.cshtml
@@ -9,7 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
     <title>@ViewBag.Title</title>
-    <link rel="shortcut icon" type="image/x-icon" href="/MyTradeMTGWebsite/asset/img/MtgCoinPng.png" />
+    <link rel="icon" type="image/x-icon" href="~/assets/img/MtgCoinPng (1).png" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:400,600,700" rel="stylesheet">
     <link href="~/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <link href="/UserPanel/vendor/bootstrap-select/dist/css/bootstrap-select.min.css" rel="stylesheet">
