--- a/MyTradeMTG/Views/Website/Index.cshtml
+++ b/MyTradeMTG/Views/Website/Index.cshtml
@@ -37,6 +37,21 @@
     </div><!--- END CONTAINER -->
 </section>
 <!-- END  HOME -->
+<div class="modal fade md" id="myModal" role="dialog" style="display: none;padding-top:100px;">
+    <div class="modal-dialog">
+        <!-- Modal content-->
+        <div class="modal-content">
+
+            <div class="modal-body modal-banner">
+                <!--<button type="button" class="close" data-dismiss="modal" onclick="closeModal();">&times;</button>-->
+                <span class="close" data-dismiss="modal" onclick="closeModal();">&times;</span>
+                <div class="modal-div">
+                    <img src="" id="img" />
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 <div class="partner-logo payment_section">
     <div class="container-fluid">
         <div class="section-title payment-title text-center">
@@ -804,7 +819,7 @@
             success: function (response) {
                 if (response.Result == "Yes") {
                     $('#SponsorName').text(response.DisplayName);
-                }
+                }   
                 else {
 
                     $("#SponsorId").addClass('errortext');
@@ -1139,7 +1154,23 @@
     </script>
 }
 
-
+<script>
+    $(document).ready(function () {
+        $.ajax({
+            url: '/Home/GetBanner', type: 'get', dataType: 'json',
+            success: function (data) {
+                debugger;
+                if (data.Result == "yes") {
+                    document.getElementById('img').src = data.BannerImage;
+                    $("#myModal").modal('show');
+                }
+                else if (data.Result == "no") {
+                    $("#myModal").modal('hide');
+                }
+            }
+        });
+    })
+</script>
 
 <script>
     var input = document.querySelector("#phone1");
