--- a/MyTradeMTG/Views/AdminReports/AssociateList.cshtml
+++ b/MyTradeMTG/Views/AdminReports/AssociateList.cshtml
@@ -118,13 +118,13 @@
                                         <th>Mobile No</th>
                                         <th>Email Id</th>
                                         <th>Member Status</th>
-                                        <th>Activation Mode</th>
+                                        @*<th>Activation Mode</th>*@
                                         <th>Action</th>
                                         <th></th>
                                         <th></th>
                                         <th></th>
                                         @*<th hidden="hidden"></th>*@
-                                        <th>Hold/Unhold TPS</th>
+                                        @*<th>Hold/Unhold TPS</th>*@
                                         <th>Withdrawal Start/Stop</th>
                                     </tr>
                                 </thead>
@@ -145,7 +145,7 @@
                                                     <td>@Item.Mobile</td>
                                                     <td>@Item.Email</td>
                                                     <td>@Item.MemberStatus</td>
-                                                    <td>@Item.ActivationMode</td>
+                                                    @*<td>@Item.ActivationMode</td>*@
                                                     <td>
                                                         <a href="/AdminReports/ViewProfileForAdmin?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">Edit</a>
                                                         @*<a href="/AdminReports/ViewProfile?Id=@Item.Fk_UserId" class="btn btn-info btn-sm">View</a>*@
@@ -186,7 +186,7 @@
                                                             </a>
                                                         }
                                                     </td>
-                                                    <td>
+                                                    @*<td>
                                                         @if (Item.IsHoldTPS == "False")
                                                         {
                                                             <a href="/AdminReports/HoldTPS?FK_UserID=@Item.Fk_UserId" class="btn btn-success btn-sm" onclick="return confirm('Sure you want to TPS HOLD this User ?')">
@@ -200,7 +200,7 @@
                                                             </a>
                                                         }
                                                        
-                                                    </td>
+                                                    </td>*@
                                                      <td>
                                                               @if (Item.WithdrawalStatus == "False")
                                                               {
