--- a/MyTradeMTG/Views/Shared/_UserLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_UserLayout.cshtml
@@ -381,7 +381,7 @@
                             }
                             else
                             {
-                                <li><a href="javascript:void(0)" data-toggle="tooltip" data-placement="right" title="Coming Soon"> Quick Send MTG</a></li>
+                                <li><a href="javascript:void(0)" data-toggle="tooltip" data-placement="right" title="Comming Soon"> Quick Send MTG</a></li>
                             }
                             
                             @if (Session["Franchisestatus"].ToString() == "Approved")
