--- a/MyTradeMTG/Views/Franchise/FranchiseDashBoard.cshtml
+++ b/MyTradeMTG/Views/Franchise/FranchiseDashBoard.cshtml
@@ -94,6 +94,16 @@
                     </div>
                 </div>
             </div>
+            <div class="col-xl-6 col-lg-6">
+                <div class="card">
+                    <div class="card-header">
+                        <h4 class="card-title">Sale Request</h4>
+                    </div>
+                    <div class="card-body">
+                        <div id="morris_bar" class="morris_chart_height"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
