--- a/MyTradeMTG/Views/Shared/_FranchiseLayout.cshtml
+++ b/MyTradeMTG/Views/Shared/_FranchiseLayout.cshtml
@@ -155,7 +155,7 @@
     <script src="/UserPanel/vendor/peity/jquery.peity.min.js"></script>
 
     <!-- Apex Chart -->
-    @*<script src="/UserPanel/vendor/apexchart/apexchart.js"></script>*@
+    <script src="/UserPanel/vendor/apexchart/apexchart.js"></script>
     <script src="/UserPanel/vendor/owl-carousel/owl.carousel.js"></script>
     <!-- Datatable -->
     <script src="/UserPanel/vendor/datatables/js/jquery.dataTables.min.js"></script>
@@ -166,9 +166,10 @@
     <script src="~/plugins/table/datatable/button-ext/buttons.print.min.js"></script>
     <!-- Dashboard 2 -->
     <script src="/UserPanel/js/dashboard/dashboard-4.js"></script>
-    <script src="/UserPanel/js/deznav-init.js"></script>
-    <script src="/UserPanel/js/demo.js"></script>
-
+    <script src="~/UserPanel/js/plugins-init/morris-init.js"></script>
+    <script src="~/UserPanel/js/deznav-init.js"></script>
+    <script src="~/UserPanel/vendor/raphael/raphael.min.js"></script>
+    <script src="~/UserPanel/vendor/morris/morris.min.js"></script>
     <script>
         $(document).ready(function () {
             App.init();
